# SuperAgents

./: .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  pyproject.toml  pytest.ini  super-agents-dev.skill  tmp_mirofish_spec.json
.agent_aerospace/: config.yaml
.agent_autonomous_vehicles/: config.yaml
.agent_biotech/: config.yaml
.agent_cannabis_psychedelics/: config.yaml
.agent_cybersecurity/: config.yaml
.agent_fintech/: config.yaml
.agent_gaming/: config.yaml
.agent_meddevice/: config.yaml
.agent_quantum/: config.yaml
.agent_rare_earth/: config.yaml
.agent_renewable_energy/: config.yaml
.agent_simulation/: config.yaml
.agent_space/: config.yaml
.claude/: launch.json  settings.local.json
.codex/: instructions.md
.gemini/: settings.json
agent_blueprints/: aerospace_defense_agent.md  biotech_agent.md  clean_energy_mining_agent.md  gaming_studio_agent.md  project.md  tech_innovation_agent.md
dashboards/: __init__.py  aerospace_current_status.json  app.py  biotech_current_status.json  biotech_findings_latest.json  biotech_run_latest.json  dashboard_data.py  fintech_current_status.json  fintech_run_latest.json  fintech_run_latest.md  gaming_current_status.json  gaming_findings_latest.json  gaming_run_latest.json  gaming_run_latest.md  renewable_energy_current_status.json  renewable_energy_run_latest.json  renewable_energy_run_latest.md
deploy/: hostinger_vps.md
docs/: APPLICATION_DESCRIPTION.md  BACKEND_TASKS.md  EXECUTION_PLAN.md  FRONTEND_TASKS.md  PROJECT_OVERVIEW.md  README.md  architecture.md  current_status_2026-03-15.md  (+7 more)
(+332 files in other folders)
